<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Rainville</string>
    <string name="app_desp">The Sound of Rain, without the wet feet.</string>
    <string name="play">Play</string>
    <string name="icon_rain">\uf019</string>
    <string name="stop">Stop</string>
    <string name="rain_poem">Rain, Rain, Rain, \ncome again and again. \n\nIn the winter, in the summer and in
        spring.\n \nCome with joy, \nfall with happiness and go with sorrow.\n\nRain, Rain, Rain,\ncome again and
        again\n…
    </string>
    <string name="keep_running">Rain, Rain, Rain, \ncome again and again…</string>
    <string name="headset_needed">Please plugin headset before playing.</string>
    <string name="version" formatted="false">version %s(%d)</string>
    <string name="copyrights">http://www.gracecode.com\nlucky@gracecode.com\nCopyright 2011-2014,
        All rights reserved.
    </string>
    <string name="app_key">V6W2SZNP8PRG59654ZZ7</string>
    <string name="need_money_for_nexus5">Need money for Google Nexus5.</string>
    <string name="paypal_url" formatted="false">https://www.paypal.com/cgi-bin/webscr?cmd=_donations&amp;
        business=%s&amp;lc=EE&amp;item_name=%s&amp;currency_code=USD&amp;amount=%s
    </string>
    <string name="paypal_account">lucky@gracecode.com</string>
    <string name="paypal_item_name">Rain for Android</string>
    <string name="paypal_amount">2.99</string>
    <string name="focus_play_remain">Click %d times play without headset.</string>
    <string name="play_wihout_headset">Now you can play without headset</string>
    <string name="set_close_timer">Auto stop play after</string>
    <string name="minutes">minutes</string>
    <string name="welcome_use_rainville">Welcome use Rainville!</string>
    <string name="welcome_use_rainville_summary">\n\nYou can straight tap on the red button\n
        to enable paly with your phone speaker.</string>
    <string name="panel_intro">Now, You have more choice :^)</string>
    <string name="panel_intro_summary">\n\nYou can select more type of rain, \n and swip left to set stop play
        timeout.
    </string>
</resources>
