<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/panel_background"
        >

    <ToggleButton
            style="@style/ToggleButton"
            android:id="@+id/toggle_panel"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:checked="false"
            />

    <TextView
            android:text="@string/icon_rain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="90sp"
            android:gravity="center"
            android:layout_marginBottom="30dp"
            android:id="@+id/icon"
            android:layout_centerInParent="true"
            android:layout_margin="20dp"
            style="@style/TitleShadow"
            />

    <ToggleButton
            android:visibility="invisible"
            android:layout_below="@id/icon"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/stop"
            android:textOff="@string/play"
            android:width="100dip"
            android:layout_centerHorizontal="true"
            android:id="@+id/toggle_play"
            android:checked="false"
            />

    <TextView
            android:visibility="invisible"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:layout_centerHorizontal="true"
            android:text="\ue027"
            android:textColor="@color/sufu"
            android:padding="10dip"
            android:background="@drawable/textview_headset_needed"
            android:textSize="18dip"
            android:layout_below="@id/toggle_play"
            android:gravity="center"
            android:id="@+id/headset_needed"
            />

    <LinearLayout
            android:layout_above="@id/icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            >

        <TextView
                android:text="@string/app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="36sp"
                android:id="@+id/title"
                android:gravity="center"
                style="@style/TitleShadow"
                android:layout_marginTop="10dip"
                />

        <TextView
                android:text="@string/app_desp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:gravity="center"
                android:layout_marginTop="5dip"
                android:lines="1"
                android:id="@+id/desp"
                android:textColor="@color/berry_blue"
                />

        <ImageView
                android:layout_width="150dp"
                android:layout_height="1dp"
                android:background="@color/sufu"
                android:layout_marginTop="20dp"
                android:alpha="0.9"
                android:contentDescription="@android:string/untitled"/>


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:gravity="center"
                android:visibility="invisible"
                android:textColor="@color/berry_blue"
                android:layout_marginTop="10dp"
                android:id="@+id/countdown"
                />

    </LinearLayout>
</RelativeLayout>
