<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="5dip"
            >


        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/version"
                android:gravity="center"
                android:id="@+id/version"
                android:textColor="@color/sufu"
                android:textSize="14sp"
                />


        <ImageButton
                android:layout_margin="15dip"
                android:layout_width="25dip"
                android:layout_height="25dip"
                android:layout_gravity="center"
                android:alpha=".75"
                android:background="@drawable/wu"
                android:contentDescription="@string/app_name"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/copyrights"
                android:gravity="center"
                android:autoLink="web"
                android:linksClickable="true"
                android:lineSpacingExtra="10dip"
                android:textColor="@color/sufu"
                android:textColorLink="@color/red"
                />
    </LinearLayout>

</ScrollView>
